--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -9,13 +9,13 @@ $link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
 
 // Main Section Colors
 $main-bg: #f8f8f8 !default;
-$page-bg: #252525 !default;
+$page-bg: #C7C7C7 !default;
 $article-border: #eeeeee !default;
 
-$header-bg: #333 !default;
+$header-bg: #555 !default;
 $header-border: lighten($header-bg, 15) !default;
 $title-color: #f2f2f2 !default;
-$subtitle-color: #aaa !default;
+$subtitle-color: #ccc !default;
 
 $text-color: #222 !default;
 $text-color-light: #aaa !default;
@@ -72,7 +72,7 @@ a {
 }
 
 html {
-  background: $page-bg image-url('line-tile.png') top left;
+  background: $page-bg;
 }
 body {
   > div {
