--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -11,8 +11,9 @@ body > header {
   h2 {
     margin: .2em 0 0;
     @extend .sans;
-    font-size: 1em;
+    font-size: .8em;
     color: $subtitle-color;
     font-weight: normal;
+	font-style: italic;
   }
 }
