--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -11,9 +11,8 @@ body > header {
   h2 {
     margin: .2em 0 0;
     @extend .sans;
-    font-size: .8em;
+    font-size: 1em;
     color: $subtitle-color;
     font-weight: normal;
-	font-style: italic;
   }
 }
