--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -9,7 +9,7 @@ $link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
 
 // Main Section Colors
 $main-bg: #f8f8f8 !default;
-$page-bg: #252525 !default;
+$page-bg: #a3a3a3 !default;
 $article-border: #eeeeee !default;
 
 $header-bg: #333 !default;
@@ -73,6 +73,7 @@ a {
 
 html {
   background: $page-bg image-url('line-tile.png') top left;
+  text-align: justify;
 }
 body {
   > div {
