--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,6 +24,9 @@ body > header h1 {
 }
 body > header h2 {
   font-family: $header-subtitle-font-family;
+  font-style: italic;
+  font-size: .8em !important;
+  color: #c7c7c7 !important;
 }
 
 body {
