--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,14 +1,14 @@
 $blockquote: $type-border !default;
-$sans: "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
+$sans: 'Open Sans', sans-serif !default;
 $serif: "PT Serif", Georgia, Times, "Times New Roman", serif !default;
 $mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace !default;
-$heading-font-family: "PT Serif", "Georgia", "Helvetica Neue", Arial, sans-serif !default;
+$heading-font-family: $sans !default;
 $header-title-font-family: $heading-font-family !default;
 $header-subtitle-font-family: $heading-font-family !default;
 
 // Fonts
 .heading {
-  font-family: $heading-font-family;
+  font-family: $sans;
 }
 .sans { font-family: $sans; }
 .serif { font-family: $serif; }
@@ -24,15 +24,12 @@ body > header h1 {
 }
 body > header h2 {
   font-family: $header-subtitle-font-family;
-  font-style: italic;
-  font-size: .8em !important;
-  color: #c7c7c7 !important;
 }
 
 body {
   line-height: 1.5em;
   color: $text-color;
-  @extend .serif;
+  @extend .sans;
 }
 h1 {
   font-size: 2.2em;
