--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,7 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/">Home</a></li>
+  <li><a href="{{ root_url }}/about">About</a></li>
+  <li><a href="{{ root_url }}/blog/archives">News</a></li>
+  <li><a href="{{ root_url }}/sponsors">Sponsors</a></li>
+  <li><a href="{{ root_url }}/atom.xml"><img src='/images/rss.png' /> RSS</a></li>
 </ul>
