--- a/source/_includes/asides/twitter_inner.html
+++ b/source/_includes/asides/twitter_inner.html
@@ -1,6 +1,6 @@
 {% if site.twitter_user %}
   <h1>Latest Tweets</h1>
-  <p>Tell everyone you know about BarCamp Berkshire! Blog, talk and tweet using hashtag #bcb.</p>
+  <p>Join the conversation with #iwdev.</p>
   <ul id="tweets">
     <li class="loading">Status updating...</li>
   </ul>
