--- a/source/_includes/asides/recent_posts_inner.html
+++ b/source/_includes/asides/recent_posts_inner.html
@@ -2,7 +2,8 @@
 <ul id="recent_posts">
   {% for post in site.posts limit: site.recent_posts %}
     <li class="post">
-      <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ root_url }}{{ post.url }}"><strong>{{ post.title }}</strong></a><br />
+      {{ post.description }}
     </li>
   {% endfor %}
 </ul>
