--- a/source/_includes/asides/sponsors.html
+++ b/source/_includes/asides/sponsors.html
@@ -1,10 +1,6 @@
 <section>
   <h1>Sponsors</h1>
-  <ul id="sponsors">
-    {% for sponsor in site.categories.Sponsor %}
-      <li>
-        <a href="{{ root_url }}{{ sponsor.url }}"><img src='{{ sponsor.image }}' /></a>
-      </li>
-    {% endfor %}
-  </ul>
+  <ul>
+  <li><a href="http://www.jetbrains.com/" title="Sponsored by JetBrains"><img alt="JetBrains Logo" src="/images/logo_JB_tagline.png"></a></li>
+  </ul>	
 </section>
